# pyracing-coach

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  config.toml  pyproject.toml  pyracing-coach.spec  requirements.txt
.github/workflows/: release.yml
src/: audio.py  coach.py  config.py  garage61.py  ibt_reader.py  instinct.py  iracing_reader.py  main.py  oauth.py  reference_lap.py  report.py  session_log.py  settings_ui.py  smoothness.py
