[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyracing-coach"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyirsdk==1.3.2",
    "garage61api==0.0.2",
    "pyttsx3==2.98",
    "customtkinter==5.2.2",
    "tomli==2.0.1",
    "requests==2.32.3",
]

[project.optional-dependencies]
build = [
    "pyinstaller==6.6.0",
]
